--- a/index.html
+++ b/index.html
@@ -3,43 +3,46 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet"> 
         <title>goodbye songs</title>
     </head>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="script.js"></script> -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
+    <!-- <script src="script.js"></script> -->
     <body>
     <div class="row">
     <div class="column left">
-        <video class=videoInsert id="v11" src="assets/manisha-video.mp4" poster="assets/manisha-thumb.png"></video>
-        <p>Once upon a time Manisha gave me some really amazing advice. I didn't act on it mostly because I'm a dumbfuck. Thanks for being nice to me. You get a song made on a marble machine.
+        <video controls class=videoInsert id="v11" src="assets/videos/prashant-mv.mp4" poster="assets/thumbs/prashant-thumb.png"></video>
+        <p>Whenever I see Prashant, he has a smile on his face. Kinda reminds me of sunshine on a cold day. And so does this song, not just to me but to quite a few other people according to the YT comments section.
         </p>
     </div>
     <div class="column middle">
-        <video controls class=videoInsert src="assets/manisha-video.mp4" poster="assets/manisha-thumb.png"></video>
-        <p>Once upon a time Manisha gave me some really amazing advice. I didn't act on it mostly because I'm a dumbfuck. Thanks for being nice to me. You get a song made on a marble machine.
+        <video  controls class=videoInsert id="v12" src="assets/videos/akhil-mv.mp4" poster="assets/thumbs/akhil-thumb.png"></video>
+        <p>Akhil's so handsome I almost have a mancrush on him #nohomo. Yes, this song is called Plastic Love and yes #stillnohomo.
         </p>
     </div>
     <div class="column right">
-        <video controls class=videoInsert src="assets/manisha-video.mp4" poster="assets/manisha-thumb.png"></video>
-        <p>Once upon a time Manisha gave me some really amazing advice. I didn't act on it mostly because I'm a dumbfuck. Thanks for being nice to me. You get a song made on a marble machine.
+        <video  controls class=videoInsert id="v13" src="assets/videos/arnab-mv.mp4" poster="assets/thumbs/arnab-thumb.png"></video>
+        <p>I've seen Arnab read a lot of books, a lot of them without physics or maths. This song is based on a sci-fi short story by Ray Bradbury called The Veldt. It's kinda ghastly but I think Arnab would like it if he read it unless he already does.
         </p>
     </div>
     </div>
-    <div class="row">
-    <div class="column left">
-        <p>Some text..</p>
-    </div>
-    <div class="column middle">
-        <h2>Column 2</h2>
-        <p>Some text..</p>
-    </div>
-    <div class="column right">
-        <h2>Column 3</h2>
-        <p>Some text..</p>
-    </div>
-    </div>
+
+    <div class="row" id="r2">
+        <div class="pad"></div>
+        <div class="column left">
+            <video controls class=videoInsert id="v11" src="assets/videos/manisha-mv.mp4" poster="assets/thumbs/manisha-thumb.png"></video>
+            <p>Once upon a time Manisha gave me some really amazing advice. I didn't act on it mostly because I'm a dumbfuck. I fucked it up royally. Thanks for being so nice to me. You get a song made on a marble machine.
+            </p>
+        </div>
+        <div class="column right">
+            <video  controls class=videoInsert id="v12" src="assets/videos/joydeep-mv.mp4" poster="assets/thumbs/joydeep-thumb.png"></video>
+            <p>My hands hurt from coding. I wish I had a more macho excuse for the pain, like I punched through a wall or something. I bet Joydeep has a macho excuse. I wanted to end with a meme song. Sorry.
+            </p>
+        </div>
+        </div>
+        <div class="pad"></div>
     </body>
 </html>
